--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </div>
         <div class="collapse navbar-collapse w-50" id="menu">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link"  href="./home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link"  href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link"  href="./upevents.html">Upcoming Events</a></li>
                     <li class="nav-item"><a class="nav-link"  href="./pastevents.html">Past Events</a></li>
                     <li class="nav-item"><a class="nav-link active"  href="./contact.html">Contact</a></li>
