--- a/pastevents.html
+++ b/pastevents.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>PAST EVENTS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="shortcut icon" href="./assets/img/Logo-Amazing-Events.png" type="image/x-icon">
@@ -18,7 +18,7 @@
         </div>
         <div class="collapse navbar-collapse w-50" id="menu">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link active"  href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active"  href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link"  href="./upevents.html">Upcoming Events</a></li>
                     <li class="nav-item"><a class="nav-link"  href="./pastevents.html">Past Events</a></li>
                     <li class="nav-item"><a class="nav-link"  href="./contact.html">Contact</a></li>
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <header class="d-flex align-items-center justify-content-center bg-secondary">
-                <a class=" fs-2 text-decoration-none text-danger " href="./home.html">HOME</a>
+                <a class=" fs-2 text-decoration-none text-danger " href="./home.html">PAST EVENTS</a>
     </header>
     <main class="bg-dark p-5">
       <div>
@@ -47,51 +47,8 @@
           </fieldset>
         </form>
       </div>
-      <div class="d-flex align-items-stretch justify-content-around " id="cardcolumn">
-        <div class="card">
-          <img src="./assets/img/Feria-de-comidas7.jpg" class="card-img-top" alt="food fair">
-          <div class="card-body bg-secondary">
-            <h5 class="card-title">Festival of the collectivities</h5>
-            <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
-            <div class="d-flex justify-content-between">
-              <p>Price: $5</p>
-              <a href="./contact.html" class="btn btn-primary bg-warning text-dark">Contact Us</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./assets/img/Salida-al-museo5.jpg" class="card-img-top" alt="museum" id="museum">
-          <div class="card-body bg-secondary">
-            <h5 class="card-title">Jurassic Park</h5>
-            <p class="card-text">Let's go to the paleontology museum for an incredible tour to learn about the largest dinosaurs.</p>
-            <div class="d-flex justify-content-between">
-              <p>Price: $15</p>
-              <a href="./contact.html" class="btn btn-primary bg-warning text-dark">Contact Us</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./assets/img/Concierto-de-musica1.jpg" class="card-img-top" alt="metallica concert">
-          <div class="card-body bg-secondary">
-            <h5 class="card-title">Metallica in concert</h5>
-            <p class="card-text">The only concert of the most emblematic band in the world</p>
-            <div class="d-flex justify-content-between">
-              <p>Price: $150</p>
-              <a href="./contact.html" class="btn btn-primary bg-warning text-dark">Contact Us</a>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="./assets/img/Fiesta-de-disfraces1.jpg" class="card-img-top" alt="halloween">
-          <div class="card-body bg-secondary">
-            <h5 class="card-title">Halloween Night</h5>
-            <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
-            <div class="d-flex justify-content-between">
-              <p>Price: $12</p>
-              <a href="./contact.html" class="btn btn-primary bg-warning text-dark">Contact Us</a>
-            </div>
-          </div>
-        </div>
+      <div class="d-flex align-items-stretch justify-content-around row" id="cardcolumn">
+
       </div>
     </main>
     <footer class="bg-warning text-dark d-flex justify-content-between">
@@ -105,5 +62,7 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+    <script src="./data.js"></script>
+    <script src="./pastevents.js"></script>
+  </body>
 </html>
