--- a/details.html
+++ b/details.html
@@ -30,14 +30,8 @@
                 <a class=" fs-2 text-decoration-none text-danger " href="./details.html">DETAILS</a>
     </header>
     <main class="bg-dark p-5 text-white">
-        <div class="bg-secondary d-flex justify-content-center p-5" >
-            <div>
-                <img class="books" src="./assets/img/Books.jpg" alt="books">
-            </div>
-            <div class="p-4 bg-dark text-white">
-                <h2>School Book Fair</h2>
-                <p>Bring your unused school book and bring the one you need.</p>
-            </div>
+        <div class="bg-secondary d-flex justify-content-center p-5" id="container" >
+           
         </div>
     </main>
 <footer class="bg-warning text-dark d-flex justify-content-between">
@@ -50,6 +44,8 @@
     <h2>Cohort 39</h2>
   </div>
 </footer>
+<script src="./scripts/data.js"></script>
+<script src="./scripts/details.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
