--- a/index.html
+++ b/index.html
@@ -25,25 +25,19 @@
                         <li class="nav-item"><a class="nav-link"  href="./stats.html">Stats</a></li>
                     </ul>
             </div>
+
         </nav>
         <header class="d-flex align-items-center justify-content-center bg-secondary">
                     <a class=" fs-2 text-decoration-none text-danger " href="./home.html">HOME</a>
         </header>
         <main class="bg-dark p-5">
           <div>
-            <form class="d-flex align-items-center justify-content-between text-white">
-              <fieldset>
-                <label for="check1">Checkbox</label>
-                <input type="checkbox" id="check1">
-                <label for="check2">Checkbox</label>
-                <input type="checkbox" id="check2">
-                <label for="check3">Checkbox</label>
-                <input type="checkbox" id="check3">
-                <label for="check4">Checkbox</label>
-                <input type="checkbox" id="check4">
+            <form class="d-flex align-items-center justify-content-between text-white" id="formCheck">
+              <fieldset class="checkbox" id="checkContainer">
+
               </fieldset>
               <fieldset>
-                <input type="search">Buscar
+                <input id="search" type="search">Buscar
               </fieldset>
             </form>
           </div>
@@ -61,8 +55,9 @@
             <h2>Cohort 39</h2>
           </div>
         </footer>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <script src="./data.js"></script>
-        <script src="./index.js"></script>
+        <script src="./scripts/data.js"></script>
+        <script src="./scripts/index.js" type="module"></script>
       </body>
     </html>
