--- a/upevents.html
+++ b/upevents.html
@@ -31,19 +31,12 @@
     </header>
     <main class="bg-dark p-5">
       <div>
-        <form class="d-flex align-items-center justify-content-between text-white">
-          <fieldset>
-            <label for="check1">Checkbox</label>
-            <input type="checkbox" id="check1">
-            <label for="check2">Checkbox</label>
-            <input type="checkbox" id="check2">
-            <label for="check3">Checkbox</label>
-            <input type="checkbox" id="check3">
-            <label for="check4">Checkbox</label>
-            <input type="checkbox" id="check4">
+        <form class="d-flex align-items-center justify-content-between text-white" id="formCheck">
+          <fieldset class="checkbox" id="checkContainer">
+
           </fieldset>
           <fieldset>
-            <input type="search">Buscar
+            <input id="search" type="search">Buscar
           </fieldset>
         </form>
       </div>
@@ -62,8 +55,8 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="./data.js"></script>
-    <script src="./upevents.js"></script>
+    <script src="./scripts/data.js"></script>
+    <script src="./scripts/upevents.js" type="module"></script>
   </body>
 
 </html>
