--- a/stats.html
+++ b/stats.html
@@ -26,82 +26,36 @@
                 </ul>
         </div>
     </nav>
-    <main class="bg-dark p-5">
-      <table class= "text-white d-flex align-items-center justify-content-center">
-          <tr class="bg-warning">
-            <th>
-              Event statistics
-            </th>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr class="bg-warning">
-            <th>Upcoming events statistics by category</th>
-          </tr>
-          <tr>
-            <td>categorties</td>
-            <td>revenues</td>
-            <td>percentage</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr class="bg-warning">
-            <th>Past Events statistics by category</th>
-          </tr>
-          <tr>
-            <td>categorties</td>
-            <td>revenues</td>
-            <td>percentage</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
-          <tr>
-            <td>Table Data</td>
-            <td>Table Data</td>
-            <td>Table Data</td>
-          </tr>
 
 
 
+    <main class="bg-dark p-5  d-flex flex-column align-items-center justify-content-center ">
+      <table class="text-white ">
+          <tr class="bg-warning text-dark ">
+            <th>Events Statistics</th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr id="table1">
+          </tr>
+      </table>
+      <table class="text-white">
+        <tr class="bg-warning text-dark ">
+          <th class="p-3">Upcoming events Statistics by category</th>
+          <th></th>
+          <th></th>
+        </tr>
+        <tbody id="table2">
+        </tbody>
+      </table>
+      <table class="text-white">
+        <tr class="bg-warning text-dark">
+          <th>Past events Statistics by category</th>
+          <th></th>
+          <th></th>
+        </tr>
+        <tbody id="table3">
+        </tbody>
       </table>
     </main>
 <footer class="bg-warning text-dark d-flex justify-content-between">
@@ -114,6 +68,7 @@
     <h2>Cohort 39</h2>
   </div>
 </footer>
+<script src="./scripts/stats.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
